--- a/demo-1-clear-cache.ipynb
+++ b/demo-1-clear-cache.ipynb
@@ -8,7 +8,16 @@
       },
       "outputs": [],
       "source": [
-        "import jlite_util"
+        "import jlite_util as m"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Clear Storage\n",
+        "+ Remove all user changes i.e. like a clear cache"
       ]
     },
     {
@@ -19,7 +28,7 @@
       },
       "outputs": [],
       "source": [
-        "s = jlite_util.Storage()"
+        "s = m.Storage()"
       ]
     },
     {
